# QuICC-Solver

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  README_clusters.md  README_docker.md
Components/: CMakeLists.txt
Components/Common/: CMakeLists.txt
Components/Common/Scripts/: generate_fieldcomponents.py  generate_nondimensional.py  generate_physicalnames.py
Components/Common/TestSuite/: CMakeLists.txt
Components/Common/cmake.d/setup/: RegisterArithmetics.cmake  RegisterModelOperator.cmake  RegisterModelOperatorBoundary.cmake  RegisterNonDimensional.cmake  TestSuite.cmake  (+4 more)
Components/Common/src/: CMakeLists.txt  Hasher.cpp  Precision.cpp  QuICCEnv.cpp  QuICCTimer.cpp
Components/Cpp/: CMakeLists.txt
Components/Cpp/Cpp/: Span.hpp
Components/Cuda/: CMakeLists.txt
Components/Cuda/Cuda/: CudaUtil.hpp
Components/DenseOp/: CMakeLists.txt
Components/DenseOp/DenseOp/: IDenseOpOperator.hpp
Components/DenseSM/: CMakeLists.txt
Components/DenseSM/DenseSM/: IDenseSMOperator.hpp
Components/Environment/: CMakeLists.txt  MpiTypes.hpp
Components/Environment/Environment/: CMakeLists.txt  IEnvironment.cpp  IEnvironment.hpp  Mpi.cpp  Mpi.hpp  MpiTypes.hpp  QuICCEnv.cpp  QuICCEnv.hpp  Serial.cpp  Serial.hpp  Typedefs.hpp
Components/Environment/cmake.d/: Mpi.cmake
Components/Fft/: CMakeLists.txt
Components/Fft/Fft/: Fft.hpp  FftTypes.hpp
Components/Framework/: CMakeLists.txt  Config.cmake.in
Components/Framework/Scripts/: generate_transform_backward.py  generate_transform_forward.py  generate_transform_reductor.py
Components/Framework/TestSuite/: CMakeLists.txt
Components/Framework/src/: CMakeLists.txt
Components/Git/: CMakeLists.txt
Components/Graph/: CMakeLists.txt
Components/Graph/Graph/: ALegendreMap.cpp  BackendsMap.hpp  CMakeLists.txt  FourierMap.cpp  Jit.hpp  MlirALegendreShims.cpp  MlirDeallocShims.cpp  MlirFourierShims.cpp  MlirShims.cpp  MlirShims.hpp  MlirTransposeShims.cpp  MlirWorlandShims.cpp  OpsMap.cpp  OpsMap.hpp  PointwiseMap.cpp  Tags.hpp  TransposeMap.cpp  Types.hpp  WorlandMap.cpp
Components/Graph/TestSuite/: CMakeLists.txt  GraphTests.cpp  GraphTests.cu  GraphTestsCuda.cpp  GraphTestsMain.cpp  GraphTestsMpi.cpp  Utils.cpp  Utils.hpp  complex-3d-fwd.mlir  simple-3d-bwd.mlir  simple-3d-fwd.mlir  simple-3d-loop.mlir  simple-tree.mlir
Components/Io/: CMakeLists.txt
Components/Io/TestSuite/: CMakeLists.txt
Components/Io/src/: CMakeLists.txt
Components/Kokkos/: CMakeLists.txt  Kokkos.cpp  Kokkos.hpp  KokkosTypedefs.hpp
Components/Memory/: CMakeLists.txt
Components/Memory/Memory/: Memory.hpp  MemoryResource.hpp  Pensieve.hpp
Components/Memory/TestSuite/: CMakeLists.txt  MemoryTests.cpp  MemoryTests.cu
Components/Operator/: CMakeLists.txt
Components/Operator/Operator/: Binary.hpp  Interface.hpp  Nary.hpp  Unary.hpp
Components/Polynomial/: CMakeLists.txt
Components/Polynomial/Bessel/: CMakeLists.txt  Jn.hpp
Components/Polynomial/TestSuite/: CMakeLists.txt
Components/Polynomial/src/: CMakeLists.txt  ThreeTermRecurrence.cpp
Components/Profiling/: CMakeLists.txt  README.md
Components/Profiling/Profiler/: CMakeLists.txt  Interface.hpp
Components/Profiling/TestSuite/: CMakeLists.txt  LikwidTests.cpp  ProfilerTests.cpp  ProfilerTestsMpi.cpp  TrackerTests.cpp
Components/Profiling/Timers/: CMakeLists.txt  ITimer.hpp  MpiTimer.cpp  MpiTimer.hpp  SerialTimer.cpp  SerialTimer.hpp  SteadyTimer.cpp  SteadyTimer.hpp  TimerMacro.h  TimerTools.cpp  TimerTools.hpp
Components/Profiling/Tracker/: CMakeLists.txt  GetVM.hpp  MemoryTracker.cpp  MemoryTracker.hpp  PeakRss.hpp  Tracker.cpp  Tracker.hpp
Components/PyQuICC/: CMakeLists.txt
Components/PyQuICC/TestSuite/: CMakeLists.txt
Components/PyQuICC/src/: CMakeLists.txt  Coordinator.cpp  CoreWrapper.cpp  ModelWrapper.cpp  NumpyWrapper.cpp  Tools.cpp
Components/SparseSM/: CMakeLists.txt
Components/SparseSM/TestSuite/: CMakeLists.txt
Components/SparseSM/src/: CMakeLists.txt  IBesselOperator.cpp  IChebyshevOperator.cpp  ISparseSMOperator.cpp  IWorlandOperator.cpp
Components/Stability/: CMakeLists.txt  README.md
Components/Stability/Stability/: CMakeLists.txt  LinearStability.cpp  LinearStability.hpp  LinearStabilityFactory.hpp  MarginalCurve.cpp  MarginalCurve.hpp  StabilityBase.cpp  StabilityBase.hpp
Components/Std/: CMakeLists.txt
Components/TestSuite/: CMakeLists.txt
Components/TestSuite/Mathematica/: Bessel.wl  Worland.wl
Components/TestSuite/TestSuite/: CMakeLists.txt  Io.cpp  Io.hpp  ViewMeta.cpp  ViewMeta.hpp
Components/TimestepLegacy/: CMakeLists.txt
Components/TimestepLegacy/Timestep/: CMakeLists.txt
Components/TimestepPc/: CMakeLists.txt
Components/TimestepPc/Timestep/: CMakeLists.txt
Components/TimestepRkcb/: CMakeLists.txt
Components/TimestepRkcb/TestSuite/: CMakeLists.txt
Components/TimestepRkcb/Timestep/: CMakeLists.txt
Components/Transform/: CMakeLists.txt
Components/Transform/TestSuite/: CMakeLists.txt
Components/Transform/ViewOps/: CMakeLists.txt
Components/Transform/Wrappers/: CMakeLists.txt  OpV.cpp.in  OpV.hpp.in
Components/Transform/src/: CMakeLists.txt  ITransformOperator.cpp  TransformSetup.cpp
Components/Types/: CMakeLists.txt
Components/Types/TestSuite/: CMakeLists.txt  TypesTests.cpp
Components/Types/Types/: BasicTypes.hpp  Constants.hpp  DecoupledComplex.hpp  DecoupledComplexInternal.hpp  DecoupledComplexUtils.hpp  Math.hpp  MatrixOperations.hpp  MatrixOperationsInternal.hpp  Precision.cpp  Precision.hpp  Typedefs.hpp
Components/Types/cmake.d/: Options.cmake
Components/View/: CMakeLists.txt
Components/View/TestSuite/: CMakeLists.txt  ViewDenseTests.cpp  ViewMapsTests.cpp  ViewSparseTests.cpp  ViewTests.cpp  ViewTests.cu
Components/View/View/: Attributes.hpp  View.hpp  ViewBase.hpp  ViewDense.hpp  ViewMacros.hpp  ViewMaps.hpp  ViewSparse.hpp  ViewUtils.hpp
Models/: .gitignore  CMakeLists.txt
Models/TestSuite/: colorcodes.py  modify_xml.py  validation_tools.py
Models/cmake.d/: ConfigureModel.cmake
Models/cmake.d/setup/: ModelTestSuite.cmake
(+4227 files in other folders)
