function(quicc_add_component component)

  string(TOLOWER "quicc_${component}" lib)
  string(TOUPPER "${component}" COMP)
  set(QUICC_${COMP}_COMPONENT_LIB "${lib}")
  set(QUICC_${COMP}_COMPONENT_LIB "${lib}" PARENT_SCOPE)

  message(VERBOSE "${component} component")
  list(APPEND CMAKE_MESSAGE_INDENT "${QUICC_CMAKE_INDENT}")
  add_subdirectory(${component} ${component})
  list(POP_BACK CMAKE_MESSAGE_INDENT)
endfunction()

quicc_add_component(Git)
quicc_add_component(Std)
quicc_add_component(Cuda)
quicc_add_component(Types)
quicc_add_component(Memory)
quicc_add_component(View)
quicc_add_component(Operator)
quicc_add_component(Profiling)
quicc_add_component(Kokkos)
quicc_add_component(Common)
quicc_add_component(Io)
quicc_add_component(Polynomial)
quicc_add_component(PyQuICC)
quicc_add_component(SparseSM)
quicc_add_component(DenseSM)
quicc_add_component(Fft)
quicc_add_component(TestSuite)
quicc_add_component(Transform/ViewOps)
quicc_add_component(Transform)
quicc_add_component(TimestepLegacy)
quicc_add_component(TimestepPc)
quicc_add_component(TimestepRkcb)
quicc_add_component(Framework)
quicc_add_component(Graph)
